--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ name: "Michael Malick"
 description: "Small Data"
 url: "http://localhost:4000"
 markdown:  rdiscount
-pygments:  true
+highlighter:  true
 permalink: none 
