--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Michael Malick"
 description: "Small Data"
 url: "http://localhost:4000"
-markdown:  rdiscount
+markdown:  kramdown
 permalink: none 
